<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:padding="8dp">

        <ImageView
            android:id="@+id/image_all"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_all_inclusive" />

        <ImageView
            android:id="@+id/image_happy"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_emoji_emotions_24" />

        <ImageView
            android:id="@+id/image_sunny"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_wb_sunny_24" />

        <ImageView
            android:id="@+id/image_logout"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:src="@drawable/ic_baseline_logout_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_menu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/hi_kotlin" />

    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/cabin"
        android:textAlignment="center"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_centerVertical="true"
        android:text="@string/motivation_phrase" />

    <View
        android:layout_width="128dp"
        android:layout_height="5dp"
        android:background="@color/purple"
        android:layout_below="@+id/text_phrase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/button_new_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/cabin"
        android:textStyle="bold"
        android:backgroundTint="@color/purple"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/new_phrase"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>